--- a/index.html
+++ b/index.html
@@ -90,14 +90,12 @@
             <p id="text-bottom1">Sites e Landing Pages</p>
             <p id="text-bottom1">Sistemas Web</p>
             <p id="text-bottom1">Consultoria Tech</p>
-            <p id="text-bottom1">E-commerce</p>
         </div>
 
         <div>
             <h3 id="text-bottom">Contato</h3>
             <a href="mailto:contato.novapgn@gmail.com">contato.novapgn@gmail.com</a>
-            <a href="#">Instagram</a>
-            <a href="#">LinkedIn</a>
+            <a href="https://www.instagram.com/novapgn/" target="_blank" >Instagram</a>
         </div>
     </footer>
 </body>
