--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="contato" id="contato">
         <h2>Entre em contato</h2>
         <p>Está pronto para tirar seu projeto do papel? Fale com a gente e descubra como podemos ajudar.</p>
-        <a class="btn" href="mailto:contato.novapgn@gmail.com">Falar com um especialista</a>
+        <a class="btn-page" href="mailto:contato.novapgn@gmail.com">Falar com um especialista</a>
     </section>
 
     <footer>
@@ -95,7 +95,7 @@
         <div>
             <h3 id="text-bottom">Contato</h3>
             <a href="mailto:contato.novapgn@gmail.com">contato.novapgn@gmail.com</a>
-            <a href="https://www.instagram.com/novapgn/" target="_blank" >Instagram</a>
+            <a href="https://www.instagram.com/novapgn/" target="_blank">Instagram</a>
         </div>
     </footer>
 </body>
