--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Empresa de tecnologia especializada na criação de sistemas personalizados e páginas web.">
+    <meta name="author" content="Nova PgN">
+    <meta name="keywords" content="tecnologia, sites, sistemas, soluções digitais">
 
     <title>Nova PgN | Soluções em Tecnologia</title>
     <link rel="shortcut icon" href="images/shortcut-logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <!-- GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,87 +23,117 @@
     <!-- FIM GOOGLE FONTS-->
 
     <link rel="stylesheet" href="style.css">
-
 </head>
 
+
 <body>
+
     <header>
         <div class="header-container">
-            <img src="images/logo.png" alt="Logo Nova PgN" class="logo" />
-            <p><strong>TRANSFORMANDO IDEIAS EM SOLUÇÕES DIGITAIS</strong></p>
-            <a href="#contato" class="btn">CONTATO</a>
+            <img src="images/logo.png" alt="Nova PgN" class="logo">
+            <ul>
+                <li><a href="#intro">Quem somos</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#diferenciais">Diferenciais</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
         </div>
     </header>
 
-    <section class="intro">
-        <h2>Quem somos</h2>
-        <p>A Nova PgN é uma empresa de tecnologia especializada na criação de sistemas personalizados e páginas web.
-            Atendemos empresas de todos os tamanhos com soluções completas, desde o planejamento até a execução e
-            manutenção de plataformas digitais.</p>
-    </section>
 
-    <section class="servicos">
-        <h2>O que fazemos</h2>
-        <div class="servico">
-            <h3>Criação de Sites e Landing Pages</h3>
-            <p>Design moderno, responsivo e otimizado para conversões. Desenvolvemos páginas com foco em performance e
-                usabilidade.</p>
-        </div>
-        <div class="servico">
-            <h3>Sistemas Personalizados</h3>
-            <p>Automatize processos, controle dados, gerencie sua operação com plataformas feitas sob medida para sua
-                empresa.</p>
-        </div>
-        <div class="servico">
-            <h3>Lojas Virtuais</h3>
-            <p>Implantação de e-commerces completos com métodos de pagamento, gestão de estoque e integração com redes
-                sociais.</p>
-        </div>
-    </section>
+    <main>
 
-    <section class="diferenciais">
-        <h2>Por que escolher a Nova PgN?</h2>
-        <div class="diferencial">
-            <h3>Atendimento Personalizado</h3>
-            <p>Nosso time entende suas necessidades e propõe soluções específicas para o seu negócio.</p>
-        </div>
-        <div class="diferencial">
-            <h3>Agilidade e Compromisso</h3>
-            <p>Trabalhamos com prazos reais e foco total em qualidade e entrega pontual.</p>
-        </div>
-        <div class="diferencial">
-            <h3>Suporte e Evolução Contínua</h3>
-            <p>Oferecemos suporte técnico contínuo e melhorias constantes nas soluções entregues.</p>
-        </div>
-    </section>
 
-    <section class="contato" id="contato">
-        <h2>Entre em contato</h2>
-        <p>Está pronto para tirar seu projeto do papel? Fale com a gente e descubra como podemos ajudar.</p>
-        <a class="btn-page" href="mailto:contato.novapgn@gmail.com">Falar com um especialista</a>
-    </section>
+
+        <section class="intro" id="intro" data-reveal>
+            <h2><i class="fa-solid fa-users"></i> | Quem somos</h2>
+            <p>A Nova PgN é uma empresa de tecnologia especializada na criação de sistemas personalizados e páginas web.
+                Atendemos empresas de todos os tamanhos com soluções completas, desde o planejamento até a execução e
+                manutenção de plataformas digitais.</p>
+        </section>
+
+        <section class="servicos" id="servicos" data-reveal>
+            <h2><i class="fa-solid fa-computer"></i> | O que fazemos</h2>
+            <div class="servico">
+                <h3>Criação de Sites e Landing Pages</h3>
+                <p>Design moderno, responsivo e otimizado para conversões. Desenvolvemos páginas com foco em performance
+                    e
+                    usabilidade.</p>
+            </div>
+            <div class="servico">
+                <h3>Sistemas Personalizados</h3>
+                <p>Automatize processos, controle dados, gerencie sua operação com plataformas feitas sob medida para
+                    sua
+                    empresa.</p>
+            </div>
+            <div class="servico">
+                <h3>Lojas Virtuais</h3>
+                <p>Implantação de e-commerces completos com métodos de pagamento, gestão de estoque e integração com
+                    redes
+                    sociais.</p>
+            </div>
+        </section>
+
+        <section class="diferenciais" id="diferenciais" data-reveal>
+            <h2><i class="fa-regular fa-circle-check"></i> | Por que escolher a Nova PgN?</h2>
+            <div class="diferencial">
+                <h3>Atendimento Personalizado</h3>
+                <p>Nosso time entende suas necessidades e propõe soluções específicas para o seu negócio.</p>
+            </div>
+            <div class="diferencial">
+                <h3>Agilidade e Compromisso</h3>
+                <p>Trabalhamos com prazos reais e foco total em qualidade e entrega pontual.</p>
+            </div>
+            <div class="diferencial">
+                <h3>Suporte e Evolução Contínua</h3>
+                <p>Oferecemos suporte técnico contínuo e melhorias constantes nas soluções entregues.</p>
+            </div>
+        </section>
+
+        <section class="contato" id="contato" data-reveal>
+            <h2><i class="fa-solid fa-envelope"></i> | Entre em contato</h2>
+            <p>Está pronto para tirar seu projeto do papel? Fale com a gente e descubra como podemos ajudar.</p>
+            <a class="btn-page" href="mailto:contato.novapgn@gmail.com">Falar com um especialista</a>
+        </section>
+    </main>
 
     <footer>
-        <div class="footer-bottom">
-            <h3 id="text-bottom">Nova PgN.</h3>
-            <h3 id="text-bottom1">Empresa 100% remota</h3>
-            <h3 id="text-bottom2">Florianópolis - SC</h3>
-            © 2025 - Nova PgN. All rights reserved.
+        <div>
+            <h3 id="text-bottom">Nova PgN</h3>
+            <p id="text-bottom1">Empresa 100% remota</p>
+            <p id="text-bottom2">Florianópolis - SC</p>
+            <p id="text-bottom2">© 2025 - Nova PgN. All rights reserved.</p>
         </div>
-
         <div>
             <h3 id="text-bottom">Serviços</h3>
             <p id="text-bottom1">Sites e Landing Pages</p>
             <p id="text-bottom1">Sistemas Web</p>
             <p id="text-bottom1">Consultoria Tech</p>
         </div>
-
         <div>
             <h3 id="text-bottom">Contato</h3>
             <a href="mailto:contato.novapgn@gmail.com">contato.novapgn@gmail.com</a>
             <a href="https://www.instagram.com/novapgn/" target="_blank">Instagram</a>
         </div>
     </footer>
+
+    <a href="https://wa.me/5548999999999" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
+    <script>
+        const reveals = document.querySelectorAll('[data-reveal]');
+        const revealOnScroll = () => {
+            reveals.forEach(el => {
+                const rect = el.getBoundingClientRect();
+                if (rect.top < window.innerHeight - 100) {
+                    el.classList.add('visible');
+                }
+            });
+        };
+        window.addEventListener('scroll', revealOnScroll);
+        revealOnScroll();
+    </script>
 </body>
 
 </html>
