--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <!-- FIM GOOGLE FONTS-->
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="script.js" defer></script>
+
+
+
 </head>
 
 
@@ -94,15 +99,16 @@
 
 
 
-
-
-
         <section class="clientes" id="clientes" data-reveal>
             <h2><i class="fa-solid fa-briefcase"></i> | Nossos Clientes</h2>
 
             <div class="clientes-wrapper">
-
-
+                <button class="cliente-nav prev" aria-label="Previous clients">
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="cliente-nav next" aria-label="Next clients">
+                    <i class="fas fa-chevron-right"></i>
+                </button>
                 <div class="clientes-container" id="clientesScroll">
                     <div class="cliente">
                         <div class="cliente-img-box">
@@ -116,8 +122,17 @@
                         </div>
                     </div>
 
+                    <div class="cliente">
+                        <div class="cliente-img-box">
+                            <img src="images/backes_logo.png" alt="Cliente 3">
+                        </div>
+                    </div>
 
-                    <!-- Adicionar mais clientes no futuro -->
+                    <!-- 
+                    
+                    Adicionar mais clientes no futuro 
+                    
+                    -->
                 </div>
 
             </div>
@@ -136,7 +151,25 @@
         <section class="contato" id="contato" data-reveal>
             <h2><i class="fa-solid fa-envelope"></i> | Entre em contato</h2>
             <p>Está pronto para tirar seu projeto do papel? Fale com a gente e descubra como podemos ajudar.</p>
-            <a class="btn-page" href="mailto:contato.novapgn@gmail.com">Falar com um especialista</a>
+            <form class="contact-form" id="contactForm" onsubmit="sendEmail(event)">
+                <div class="form-group">
+                    <label for="name">Nome</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Telefone</label>
+                    <input type="tel" id="phone" name="phone" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Mensagem</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn-page">Enviar mensagem</button>
+            </form>
         </section>
     </main>
 
@@ -155,28 +188,17 @@
         </div>
         <div>
             <h3 id="text-bottom">Contato</h3>
-            <a href="mailto:contato.novapgn@gmail.com">contato.novapgn@gmail.com</a>
             <a href="https://www.instagram.com/novapgn/" target="_blank">Instagram</a>
+            <p>contato.novapgn@gmail.com</p>
+
         </div>
     </footer>
 
-    <a href="https://wa.me/5548999999999" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
+    <a href="https://wa.me/5548988734224" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
-    <script>
-        const reveals = document.querySelectorAll('[data-reveal]');
-        const revealOnScroll = () => {
-            reveals.forEach(el => {
-                const rect = el.getBoundingClientRect();
-                if (rect.top < window.innerHeight - 100) {
-                    el.classList.add('visible');
-                }
-            });
-        };
-        window.addEventListener('scroll', revealOnScroll);
-        revealOnScroll();
-    </script>
+
 </body>
 
 </html>
