--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
                         </div>
                     </div>
 
+                    <div class="cliente">
+                        <div class="cliente-img-box">
+                            <img src="images/backes_logo.png" alt="Cliente 3">
+                        </div>
+                    </div>
+
+
+
+
 
 
                     <!-- 
